fixed font and spacing

--- a/src/Components/Auth/Auth.module.css
+++ b/src/Components/Auth/Auth.module.css
@@ -1,17 +1,18 @@
 .form {
+  min-width: 32rem;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 2.4rem;
+  font-size: 1.6rem;
   font-weight: 500;
 }
 
 .inputGroup {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  gap: 1.2rem;
+  flex-direction: column;
+  gap: 0.6rem;
 }
 
 .inputGroup label {
@@ -20,7 +21,7 @@
 
 .inputGroup input {
   font-family: inherit;
-  font-size: 1.6rem;
+  font-size: inherit;
   background-color: #dee2e6;
   border-radius: 6px;
   padding: 0.6rem 1.2rem;
@@ -45,7 +46,6 @@
   color: inherit;
   display: flex;
   align-items: center;
-  font-size: 1.4rem;
   text-decoration: none;
   transition: all 0.3s;
 }
@@ -78,7 +78,7 @@
 .btn:link,
 .btn:visited {
   color: inherit;
-  font-size: inherit;
+  font-size: 2.4rem;
   text-transform: uppercase;
   padding: 0.3rem 0.6rem;
   border-radius: 6px;
